
- Refactored Skynet::Job to be much cleaner and easier to test. 

- Skynet::Job won't call the reduce_partitioner if there are no valid results from the map_step.

- Lots more tests.  Skynet::Job now has test. Skynet::Message has more tests.  Skynet::MessageQueueAdapter::Mysql has tests that run if you have a skynet_test database setup.

- Workers now have a Skynet::CONFIG[:WORKER_MAX_PROCESSED] setting to control when to respawn based on how many that worker has processed.

- Made sure all config options for TupleSpace? adapter begin with TS and all Mysql adapter CONFIG settings start with MYSQL.        

- Mysql adapter now updates the updated_on time of rows in skynet_message_queues

- Created a Skynet::Partitioners class where various partitioners can be found.  To specify one of them merely provide that specific Skynet::Partitioners subclass as your reduce_partitioner in your Skynet::Job

BUGFIXES
- Fixed a bug where Skynet::MessageQueueAdapter::Mysql would sometimes pick up tasks another worker had already picked up.
Thanks to Jason Rimmer for finding these bugs.
- The skynet gem appears to be missing the Rubigen dependency
- Running skynet_install even without the rails arg still generates code with rails dependencies and tailings: RAILS_ROOT, RAILS_ENV, and the various directory tailings such as 'db/migrate', etc.
- Generated skynet script is missing "require 'rubygems'"
- Specification of pid directory and file is incorrect as 'skynet_manager.rb' wants only a directory with it specifying the file
- The sleep while waiting to start the queue server isn't long enough. There is now a CONFIG setting TS_SERVER_START_DELAY.


== 0.0.1 2007-12-16

* 1 major enhancement:
  * Initial release