@@ -38,6 +38,7 @@
 - Created a Skynet::Partitioners class where various partitioners can be found.  To specify one of them merely provide that specific Skynet::Partitioners subclass as your reduce_partitioner in your Skynet::Job
 
 BUGFIXES
+- starting tuplespce_server, you no longer need to provide the --port if you're already providing the drburi- 
 - Fixed a bug where Skynet::MessageQueueAdapter::Mysql would sometimes pick up tasks another worker had already picked up.
 Thanks to Jason Rimmer for finding these bugs.
 - The skynet gem appears to be missing the Rubigen dependency
